--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Showcase appium test automation via WebdriverIO/NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx wdio wdio.conf.js"
   },
   "repository": {
     "type": "git",
