--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Showcase appium test automation via WebdriverIO/NodeJS",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint test",
     "test": "npx wdio wdio.conf.js"
   },
   "repository": {
@@ -30,6 +31,7 @@
     "@wdio/sync": "^6.0.15",
     "appium": "^1.17.0",
     "chromedriver": "^81.0.0",
+    "eslint": "^6.8.0",
     "wdio-chromedriver-service": "^6.0.1"
   }
 }
