--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Showcase appium test automation via WebdriverIO/NodeJS",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint test",
+    "lint": "npx eslint test",
+    "prettier": "prettier \"**/*.+(js|jsx)\"",
+    "format": "npm run prettier -- --write",
+    "validate": "npm run lint && npm run prettier -- --list-different",
     "test": "npx wdio wdio.conf.js"
   },
   "repository": {
@@ -32,6 +35,7 @@
     "appium": "^1.17.0",
     "chromedriver": "^81.0.0",
     "eslint": "^6.8.0",
+    "prettier": "^2.0.4",
     "wdio-chromedriver-service": "^6.0.1"
   }
 }
