--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "validate": "npm run lint && npm run prettier -- --list-different",
     "test": "npx wdio wdio.conf.js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run validate"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/webmagit/js-webdriverio-appium.git"
@@ -36,6 +41,7 @@
     "chromedriver": "^81.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "husky": "^4.2.5",
     "prettier": "^2.0.4",
     "wdio-chromedriver-service": "^6.0.1"
   }
