--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run validate"
+      "pre-commit": "lint-staged"
     }
   },
   "repository": {
@@ -42,6 +42,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "husky": "^4.2.5",
+    "lint-staged": "^10.1.3",
     "prettier": "^2.0.4",
     "wdio-chromedriver-service": "^6.0.1"
   }
