--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "npm run prettier -- --write",
     "validate": "npm run lint && npm run prettier -- --list-different",
     "test": "npx wdio config/wdio.conf.js",
-    "test-ios": "npx wdio config/wdio.ios.conf.js"
+    "test-ios": "npx wdio config/wdio.ios.conf.js",
+    "test-android": "npx wdio config/wdio.android.conf.js"
   },
   "husky": {
     "hooks": {
