--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.1.3",
     "prettier": "^2.0.4",
+    "request": "^2.88.2",
     "wdio-chromedriver-service": "^6.0.1"
   }
 }
