--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "husky": "^4.2.5",
+    "json-query": "^2.2.2",
     "lint-staged": "^10.1.3",
     "prettier": "^2.0.4",
     "request": "^2.88.2",
+    "sync-request": "^6.1.0",
     "wdio-chromedriver-service": "^6.0.1"
   }
 }
